blog fix retina up arrows & cat toggle jump to top

--- a/css/modules/_retina-images.scss
+++ b/css/modules/_retina-images.scss
@@ -18,6 +18,10 @@
    }
    .popSecondary {
       .downArrow,
+      .upArrow {
+         background-position: -50px -100px;
+      }
+
       .divWave {
          background-position: -50px -100px;
       }
